cluster/apps/nginx-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      # volumes:
      # - name: html-volume
      #   configMap:
      #     name: nginx-html
      volumes:
      - name: html-volume
        secret:
          secretName: nginx-html
