cluster/apps/nginx-demo/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.services.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80




# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-demo
# spec:
#   selector:
#     matchLabels:
#       app: nginx-demo
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: nginx-demo
#     spec:
#       containers:
#         - name: nginx-demo
#           image: nginx:1.23.1-alpine
#           ports:
#             - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-demo-svc
# spec:
#   type: ClusterIP
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#       name: http
#   selector:
#     app: nginx-demo
# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: nginx
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     hajimari.io/appName: Nginx
#     hajimari.io/icon: robot
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: "nginx.services.k8s"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nginx-demo-svc
#                 port:
#                   number: 80
